--- a/TODO
+++ b/TODO
@@ -18,3 +18,4 @@
 * show busy anim until opened cb or failure
 * quality option (smooth)
 * make Home/End/Insert/Delete/Tab/Pause do something vaguely sensible
+* add button/control top-left next to audio to do fullscreen/normal toggle
