--- a/TODO
+++ b/TODO
@@ -15,3 +15,4 @@
 * hide mouse on timeout in fullscreen move
 * fullscreen mode should request suspend of screensaver (needs elm work)
 * detect letterboxing and auto-crop
+* add fullscreen/unfullscreen controls
