--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 * volume status display when changed (slider/image/percentage)
-* emotion engine selection options
+* emotion engine selection options (gui)
 * timeline thumbnails on position slider
 * right click control panel (ala terminology - need elm config ui code)
 * about display/popup (from panel?)
@@ -12,7 +12,5 @@
 * loop all option
 * show busy anim until opened cb or failure
 * add button/control top-left next to audio to do fullscreen/normal toggle
-* hide mouse on timeout in fullscreen move
-* fullscreen mode should request suspend of screensaver (needs elm work)
 * detect letterboxing and auto-crop
 
