add video thumbnails on timeline/dragable/seeker at the bottom
these thumbnails are generated in the bg by rage_thumb and will appear
once generated (or already found cached). it'll generate new thumbs if
modified dates are equal or newer on tthe src vs the thumbnail cache.
the caches store 160xN thumbs (keep aspect) with 70% lossy jpeg
quality in an eet file with one thumb per 10 second interval. so it
has limited accuracy.

--- a/TODO
+++ b/TODO
@@ -1,6 +1,5 @@
 * volume status display when changed (slider/image/percentage)
 * emotion engine selection options (gui)
-* timeline thumbnails on position slider
 * right click control panel (ala terminology - need elm config ui code)
 * about display/popup (from panel?)
 * mouse wheel for forward/rewind and/or prev/next and/or volume up/down
@@ -13,4 +12,4 @@
 * show busy anim until opened cb or failure
 * add button/control top-left next to audio to do fullscreen/normal toggle
 * detect letterboxing and auto-crop
-
+* thumbnail picker show all thumbs for video in a grid to select position
