add readme info like key controls and other things

--- a/README
+++ b/README
@@ -7,6 +7,93 @@ Rage 0.1.0
 
 ******************************************************************************
 
+This is a Video + Audio player along the lines of mplayer. It's simple
+yet decent looking. It finds album art for you for music files,
+generates thumbnails for videos so you can select logaction by
+thumbnail and more. It accepts file lists on the cmdline ala:
+
+  rage file1.mp3 file2.mp3 file3.avi file4.mp4 file5.ogg
+  rage dvd:/
+  rage http://www.blah.com/stream
+
+You can tell it what media/video engine in emotion to ue via -e:
+
+  rage -e vlc blah.mov
+  rage -e xine dvd:/
+  rage -e gstreamer1 blah.mp3
+
+If you DND files onto its window, they are added to the playlist.
+Mouse over the right of the window brings up the playlist. Mouse over
+the position bar at the bottom, if it's a video, brings up a video
+thumbnail of that position (it may take a while to generate thumbnails
+for that video - they are cached).
+
+It's fully key controlled too. Key controls are:
+
+----------------+----------------------------------------------------------
+KEY             | Action
+----------------+----------------------------------------------------------
+Left            - rewind or DVD nav left
+[               - rewind
+Right           - fast forward or DVD nav right
+]               - fast forward
+Up              - Volume up or DVD nav up
++               - Volume up
+=               - Volume up
+Down            - Volume down DVD nav down
+-               - Volume down
+space           - Pause toggle
+Pause           - Pause toggle
+p               - Pause toggle
+XF86AudioPlay   - pause toggle
+s               - Stop
+XF86AudioStop   - Stop
+PgUp            - Previous file
+XF86AudioPrev   - Previous file
+PgDn            - Next file
+XF86AudioNext   - Next file
+Home            - First file
+End             - Last file
+m               - Mute toggle
+XF86AudioMute   - Mute toggle
+l               - Loop 1 mode toggle
+q               - Exit
+Escape          - Exit
+f               - Fullscreen toggle
+F11             - Fullscreen toggle
+n               - Normalize window size to video size
+\               - Toggle File list
+y               - Video low quality toggle
+z               - Video zoom fit/fill modes toggle
+e               - Eject file/media
+Return          - DVD nav select
+Enter           - DVD nav select
+,               - DVD nav angle prev
+<               - DVD nav angle prev
+.               - DVD nav angle next
+>               - DVD nav angle next
+Tab             - DVD nav force
+0               - DVD nav 0
+1               - DVD nav 1
+2               - DVD nav 2
+3               - DVD nav 3
+4               - DVD nav 4
+5               - DVD nav 5
+6               - DVD nav 6
+7               - DVD nav 7
+8               - DVD nav 8
+9               - DVD nav 9
+`               - DVD nav 10
+~               - DVD nav 10
+F1              - DVD nav menu 1
+F2              - DVD nav menu 2
+F3              - DVD nav menu 3
+F4              - DVD nav menu 4
+F5              - DVD nav menu 5
+F6              - DVD nav menu 6
+F7              - DVD nav menu 7
+----------------+----------------------------------------------------------
+
 Requirements:
 -------------
 
