--- a/README
+++ b/README
@@ -22,6 +22,16 @@ You can tell it what media/video engine in emotion to ue via -e:
   rage -e xine dvd:/
   rage -e gstreamer1 blah.mp3
 
+You can also specify subtitle files with -sub:
+
+  rage file.mp4 -sub mysubs.srt
+
+This depends on video engine support to display them, so it may not
+work. Also rage will use a srt or sub format file if found,
+automatically. If the filename is video.mp4 or video.avi, video.mov
+etc. then rage looks for video.srt or video.sub and automatically will
+use it.
+
 If you DND files onto its window, they are added to the playlist.
 Mouse over the right of the window brings up the playlist. Mouse over
 the position bar at the bottom, if it's a video, brings up a video
