add/adjust rage todos

--- a/TODO
+++ b/TODO
@@ -4,10 +4,16 @@
 * about display/popup (from panel?)
 * mouse wheel for forward/rewind and/or prev/next and/or volume up/down
 * audio channel list/selection
-* spu channel list/selection
 * video channel list/selection
 * handle non-seekable content (eg streams)
 * loop all option
 * show busy anim until opened cb or failure
 * thumbnail picker show all thumbs for video in a grid to select position
 * add title/album/artis/file display inside window in music mode (at pos?)
+* o key to explicitly toggle osb
+* on \ key for playlist, move focus to list widget
+* shift/ctrl/ctrl+shift + arrow keys move fixed jumps
+* subtitle stream selection during play
+* subtitle on/off control during play
+* subtitle selection on cmdline
+* some kind of file browsing from rage
