--- a/TODO
+++ b/TODO
@@ -17,3 +17,4 @@
 * subtitle on/off control during play
 * subtitle selection on cmdline
 * some kind of file browsing from rage
+* dnd onto rage about logo is problematic
