--- a/INSTALL
+++ b/INSTALL
@@ -1,5 +1,5 @@
-COMPILING and INSTALLING
-------------------------
+** COMPILING and INSTALLING **
+------------------------------
 
 Meson is the build system used for this project. For more information please
 see:
@@ -11,9 +11,8 @@ see:
 Normal compilation in /usr/local:
 
     meson . build
-    cd build
-    ninja
-    sudo ninja install
+    ninja -C build
+    sudo ninja -C build install
 
 For meson build generic options:
 
@@ -25,7 +24,7 @@ For a list of project specific options supported:
 
 To set 1 or more project specific options:
 
-    meson -Doption=value [-Dother=value2] ...
+    meson --prefix=/path/to -Doption=value [-Dother=value2] [...] . build
 
 To display current configuration:
 
@@ -35,3 +34,26 @@ The above will only work after at least the following is done:
 
     meson . build
 
+** QUICK AND DIRTY HELP **
+--------------------------
+
+How clean out the build and config and start fresh:
+
+    rm -rf build
+
+How to make a dist tarball and check its build:
+(must do it from git tree clone and commit all changes to git first)
+
+    ninja -C build dist
+
+How to change prefix:
+
+    meson --prefix=/path/to/prefix . build
+
+How to install in a specific destination directory for packaging:
+
+    DESTDIR=/path/to/destdir ninja -C build install
+
+How to build with verbose output (full commands run):
+
+    ninja -C build -v
